--- a/style.css
+++ b/style.css
@@ -18,7 +18,19 @@ form {
 
 input[type=submit] {
 	font-family: sans-serif;
-	font-size: 1.25rem;
 	font-weight: 400;
+}
+
+.main input[type=submit] {
+	font-size: 1.25rem;
 	padding: 0.25rem 0.5rem;
+}
+
+.loginInfo {
+	font-style: italic;
+	margin-top: 0.5rem;
+}
+
+.loginInfo input[type=submit] {
+	margin-left: 0.25rem;
 }
